--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.24",
     "@types/node": "^11.11.7"
   }
 }
